# BigBrotherAnalytics

./: .clang-format  .clang-tidy  .copilot-instructions.md  .cppcheck-suppressions  .gitignore  AGENT_CODING_GUIDE.md  AUTONOMOUS_AGENTS_FINAL_REPORT.md  BENCHMARK_RESULTS_INDEX.md  BUILD.md  BUILD_AND_TEST_INSTRUCTIONS.md  BUILD_FIXES_NEEDED.md  BUILD_STATUS.md  BUILD_SUCCESS_REPORT.md  BUILD_SUCCESS_TIER1.md  CHANGELOG.md  CLANG_TIDY_ACTION_ITEMS.md  CLANG_TIDY_DETAILED_ANALYSIS.md  CLANG_TIDY_REPORT.md  CMakeLists.txt  CMakeLists.txt.backup  CODEBASE_STRUCTURE.md  CORRELATION_BINDINGS_WIRING.md  CUSTOM_MODEL_SUMMARY.md  DELIVERABLES.md  EMPLOYMENT_PIPELINE_TEST_REPORT.md  FAST_TRACK_TO_LIVE_TRADING.md  FEATURE_EXTRACTION_ARCHITECTURE.md  FEATURE_EXTRACTION_IMPROVEMENTS.md  FEATURE_PARITY_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FLUENT_API_IMPLEMENTATION.md  FLUENT_API_INDEX.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LIVE_TRADING_SESSION_FINAL_SUMMARY.md  ML_TRAINING_SUMMARY_2025-11-12.md  MODULE_CONVERSION_STATUS.md  MODULE_MIGRATION_STATUS.md  (+70 more)
.ai/: claude.md
.githooks/: post-commit  pre-commit
.github/: NEWS_SYSTEM_QUICK_REF.md  copilot-instructions.md
ai/: AGENT_BUILD_WORKFLOW.md  AGENT_CODING_GUIDE.md  AI_CONTEXT.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  MANIFEST.md  QUICK_START.md  README.md
benchmarks/: CMakeLists.txt  benchmark_all_ml_engines.cpp  benchmark_int32_simd_85feat.cpp  benchmark_int8_quantization.cpp  benchmark_json_parsers.cpp  benchmark_ml_implementations.py  benchmark_monte_carlo_simd.py  benchmark_suite.py  ml_benchmark_results.json  results.csv  results.json  run_valgrind_tests.sh  test_engines_with_loader.cpp  test_weight_loader_integration.cpp
bindings/: setup.py
configs/: README.md  api_keys.yaml.template  config.yaml
dashboard/: DEPLOYMENT_REPORT.md  QUICK_START.md  README.md  app.py  app_optimized.py  circuit_breaker_monitor.py  generate_sample_data.py  jax_utils.py  options_analytics_view.py  price_predictions_view.py  run_dashboard.sh  tax_implications_view.py  tax_tracking_view.py  test_dashboard.py
data/: .session_state.json  README.md  backtest_results.csv
docs/: ACCOUNT_API_QUICK_START.md  ACCOUNT_MANAGER_ARCHITECTURE.md  ACCOUNT_MANAGER_CPP23_MIGRATION.md  ACCOUNT_MANAGER_IMPLEMENTATION.md  ACCOUNT_MANAGER_QUICK_START.md  ACTIVATION_FUNCTIONS_INTEGRATION.md  ACTIVATION_FUNCTIONS_LIBRARY.md  AI_CONTEXT.md  AI_INSTRUCTIONS_UPDATE_SUMMARY.md  BATCH_OPTIMIZATION.md  BUILD_WORKFLOW.md  CHANGES_SUMMARY.md  CODING_STANDARDS.md  CORRELATION_API_REFERENCE.md  CPP23_FLUENT_API_GUIDE.md  CPP23_MODULES_GUIDE.md  CPP_MODULES_MIGRATION.md  CRITICAL_BUG_FIXES_2025-11-12.md  CURRENT_STATUS.md  CUSTOM_MODEL_DEPLOYMENT.md  CUSTOM_PRICE_PREDICTION_MODEL.md  DASHBOARD_FIXES_2025-11-12.md  DOCUMENTATION_UPDATE_2025-11-15.md  DUCKDB_BRIDGE_INTEGRATION.md  E2E_TEST_QUICK_REFERENCE.md  EMPLOYMENT_DATA_INTEGRATION.md  EMPLOYMENT_SIGNALS_IMPLEMENTATION.md  FLUENT_API_GUIDE.md  FLUENT_API_IMPLEMENTATION_SUMMARY.md  FLUENT_API_QUICK_REFERENCE.md  FLUENT_RISK_API.md  GOOGLETEST_LIBCXX_BUILD.md  GPU_ACCELERATION_RESULTS.md  GREEKS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY_2025-11-11.md  IMPORT_STD_FINDINGS.md  IMPORT_STD_MIGRATION_PLAN.md  IMPORT_STD_STATUS.md  INDEX.md  JAX_DASHBOARD_ACCELERATION.md  (+71 more)
examples/: account_manager_example.cpp  activation_functions_demo.cpp  correlation_demo.py  database_api_example.cpp  employment_signals_example.cpp  error_handling_example.cpp  fluent_risk_examples.cpp  options_strategy_integration_example.cpp  python_bindings_demo.py  schwab_oauth_example.cpp  sector_rotation_example.cpp  test_neural_net_mkl.cpp  test_options_bot.cpp  test_price_predictor.cpp  test_price_predictor_v4.cpp  test_schwab_live.cpp  test_token_receiver.cpp
gcm.cache/: options-trinomial_pricer.gcm
models/: backtest_results.csv  custom_features_metadata.json  custom_price_predictor_best.pth  custom_price_predictor_info.json  normalizer_85feat.json  price_predictor.onnx  price_predictor.onnx.data  price_predictor_60feat_best.pth  price_predictor_60feat_info.json  price_predictor_85feat_best.pth  price_predictor_85feat_info.json  price_predictor_best.pth  price_predictor_best.pth.backup  price_predictor_best.pth.backup-42feat  price_predictor_cpp_85feat.pth  price_predictor_cpp_85feat_info.json  price_predictor_features.txt  price_predictor_info.json  price_predictor_info.json.backup  price_predictor_onnx_info.txt  scaler_85feat.pkl  scaler_params.json
notebooks/: README.md
playbooks/: README.md  complete-tier1-setup.yml  install-upcxx-berkeley.yml  uninstall-tier1.yml
python/: bigbrother_duckdb.cpython-313-x86_64-linux-gnu.so.old
python_tests/: README.md  test_duckdb_bindings.py  test_market_data.py  test_sector_rotation_end_to_end.py  test_signal_generation.py
scripts/: BUILD_SCRIPTS_INDEX.md  BUILD_SCRIPT_FLOW.md  INTEGRATION_TEST_SUMMARY.md  QUICK_START_TOKEN_SENDER.md  README.md  README_BUILD_SCRIPT.md  README_TOKEN_SENDER.md  SCHWAB_BUILD_QUICKSTART.md  TESTING_INDEX.md  TEST_PATTERNS_AND_VALIDATION.md  TEST_QUICK_START.md  TOKEN_SENDER_SUMMARY.md  TRADING_ENGINE_TEST_README.md  account_schema.sql  add_greeks_columns.py  add_mock_tax_lots.py  analyze_sector_employment.py  benchmark_jax_vs_cpp.py  benchmark_optimizations.py  bootstrap.sh  build.sh  build_and_test_schwab.sh  build_schwab_tests.sh  calculate_greeks.sh  calculate_option_greeks.py  check_bot_tradable_symbols.py  collect_free_data.py  compile_duckdb_bindings.sh  employment_signals.py  (+68 more)
tests/cpp/: ACCOUNT_MANAGER_TEST_REPORT.txt  ACCOUNT_MANAGER_TEST_SUMMARY.txt  CMakeLists.txt  TEST_ACCOUNT_MANAGER_INTEGRATION.md  test_account_manager_integration.cpp  test_black_scholes.cpp  test_black_scholes_impl.cpp  test_correlation.cpp  test_options_pricing.cpp  test_options_strategies.cpp  test_order_manager_integration.cpp  test_risk_fluent_api.cpp  test_risk_modules.cpp  test_schwab_api.cpp  test_schwab_e2e_workflow.cpp  test_sentiment_analysis.cpp  test_simdjson_wrapper.cpp  test_time_lagged.cpp  test_yahoo_finance.cpp
(+462 files in other folders)
